[sonar] improve code quality
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>